# SUPER

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.catkin_tools/cache/: workspace_packages
logs/marsim_render/: build.check.014.log.stderr  build.check.015.log.stderr  build.cmake.000.log.stderr  build.cmake.006.log.stderr  build.cmake.008.log.stderr
logs/mission_planner/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr
logs/perfect_drone_sim/: build.check.006.log.stderr  build.check.015.log.stderr  build.check.016.log.stderr  build.check.020.log.stderr  build.check.021.log.stderr  build.cmake.000.log.stderr  build.cmake.002.log.stderr  build.cmake.003.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr
logs/quadrotor_msgs/: build.cmake.000.log.stderr
logs/rog_map/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.000.log.stderr
logs/super_msgs/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/super_planner/: build.cmake.000.log.stderr  build.cmake.006.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr
mission_planner/config/: waypoint.yaml
perfect_drone_sim/: CMakeLists.txt
perfect_drone_sim/include/perfect_drone_sim/: ros1_perfect_drone_model.hpp
src/marsim_render/: CMakeLists.txt
src/mission_planner/: CMakeLists.txt  package.xml
(+89 files in other folders)
